Trying to update the brand #TODO fix nav layout on Firefox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Allerta%20Stencil);.responsive-calendar .controls {
   text-align: center;
 }
-
 .responsive-calendar .controls a {
   cursor: pointer;
 }
@@ -73,7 +72,7 @@
 }
 
 body {
-  padding-top: 2em;
+  padding-top: 7rem;
 }
 
 .jumbotron {
@@ -82,7 +81,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   color: #f0f0f5;
-  text-shadow: black 0.3em 0.3em 0.3em;
+  text-shadow: black -0.1rem 0.2rem;
 }
 .jumbotron p {
   font-size: 1.5em;
@@ -93,16 +92,16 @@ h2 {
 }
 
 nav {
-  background-color: #660088;
+  background-color:#f1fc02;
   font-weight: bold;
+  box-shadow:0px 5px 10px grey;
+}
+nav a{
+    color: black;
 }
 
 btn-primary {
   background-color: #660088;
-}
-
-.stencil {
-  font-family: 'Allerta Stencil';
 }
 
 nav.admin {
